[gd_scene load_steps=13 format=3 uid="uid://b3fb508li2luj"]

[ext_resource type="Script" path="res://Util/Scripts/global_sound_manager.gd" id="1_cq6b3"]
[ext_resource type="AudioStream" uid="uid://dwh2a4s3b4ls8" path="res://Assets/Audio/SFX/player sfx/sfx_player_fs.mp3" id="2_0g2dm"]
[ext_resource type="AudioStream" uid="uid://dpqiwg5f0fmuc" path="res://Assets/Audio/SFX/player sfx/sfx_player_shoot.mp3" id="3_uh06a"]
[ext_resource type="AudioStream" uid="uid://jwunxy61xq7v" path="res://Assets/Audio/SFX/player sfx/sfx_player_hit.mp3" id="4_qvy3q"]
[ext_resource type="AudioStream" uid="uid://ddpumr7iptml4" path="res://Assets/Audio/SFX/sfx_lose_stinger.mp3" id="5_gyby3"]
[ext_resource type="AudioStream" uid="uid://bkfinvs2hfun1" path="res://Assets/Audio/SFX/enemy sfx/sfx_enemy_hit_2.mp3" id="6_nfolg"]
[ext_resource type="AudioStream" uid="uid://bvpt5s2keaj2g" path="res://Assets/Audio/SFX/sfx_bullet_ricochet.mp3" id="7_mo6t0"]
[ext_resource type="AudioStream" uid="uid://dxajxxukai2du" path="res://Assets/Audio/SFX/player sfx/sfx_sizzle_start.mp3" id="8_tlt1b"]
[ext_resource type="AudioStream" uid="uid://dtch07fxvmk5n" path="res://Assets/Audio/SFX/player sfx/sfx_sizzle_loop.mp3" id="9_r3h74"]
[ext_resource type="AudioStream" uid="uid://c1vd5dw4e7v2e" path="res://Assets/Audio/SFX/player sfx/sfx_hat_pick_up.mp3" id="10_1rin1"]
[ext_resource type="AudioStream" uid="uid://cwivnh15sxr3l" path="res://Assets/Audio/SFX/enemy sfx/sfx_enemy_death.mp3" id="11_5la7d"]
[ext_resource type="AudioStream" uid="uid://ck4yxv8mwyott" path="res://Assets/Audio/Music/mx_win_stinger_v2.wav" id="12_il3fc"]

[node name="GlobalSoundManager" type="Node" groups=["GlobalPlayerEvents"]]
script = ExtResource("1_cq6b3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="sfx_footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0g2dm")
volume_db = 8.0
bus = &"SFX"

[node name="sfx_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uh06a")
max_polyphony = 10

[node name="sfx_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qvy3q")
volume_db = 15.0
bus = &"SFX"

[node name="sfx_player_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gyby3")

[node name="sfx_enemy_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nfolg")

[node name="sfx_ricochet" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mo6t0")
max_polyphony = 4
bus = &"SFX"

[node name="sfx_sizzle_start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_tlt1b")
max_polyphony = 2
bus = &"SFX"

[node name="sfx_sizzle_loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_r3h74")
volume_db = 14.0
bus = &"SFX"
parameters/looping = true

[node name="sfx_hat_pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_1rin1")
pitch_scale = 2.0
max_polyphony = 3
bus = &"SFX"

[node name="sfx_enemy_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_5la7d")
max_polyphony = 4
bus = &"SFX"

[node name="stinger_wingame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_il3fc")
bus = &"SFX"
